<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <TextView
        android:id="@+id/title_editProdfile_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/edit_profile"
        android:textColor="#004c8c"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTitle_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/nickname"
        android:textColor="#004c8c"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/title_editProdfile_textview"
        app:layout_constraintStart_toStartOf="@+id/title_editProdfile_textview"
        app:layout_constraintTop_toBottomOf="@+id/title_editProdfile_textview" />

    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTitle_nickname"
        app:layout_constraintStart_toStartOf="@+id/editTitle_nickname"
        app:layout_constraintTop_toBottomOf="@+id/editTitle_nickname" />

    <TextView
        android:id="@+id/editTitle_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/profile_description"
        android:textColor="#004c8c"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edit_nickname"
        app:layout_constraintStart_toStartOf="@+id/edit_nickname"
        app:layout_constraintTop_toBottomOf="@+id/edit_nickname" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTitle_description"
        app:layout_constraintStart_toStartOf="@+id/editTitle_description"
        app:layout_constraintTop_toBottomOf="@+id/editTitle_description" />

    <Button
        android:id="@+id/updateProfile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#4c89bd"
        android:text="@string/updateProfile"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/edit_description"
        app:layout_constraintStart_toStartOf="@+id/edit_description"
        app:layout_constraintTop_toBottomOf="@+id/edit_description" />
</androidx.constraintlayout.widget.ConstraintLayout>